# Projet_S8

./: .gitignore  CMakeLists.txt  LICENSE  README.md  honest_node.cpp  malicious_node.cpp  test_launch.py
ansible/: Dockerfile  Dockerfile_host_machine  Makefile  ansible.cfg  ansibleconf.sh  create_virtual_network.sh  end_simu.sh  find_free_port.sh  hosts  in_host_launcher.sh  kill_process.yaml  project_example.c  run_simu.sh  send_src.yaml  stop_virtual_network.sh  test_mertic_baslt_exchange.sh
ansible/bootstrap_server/: Makefile  Node.c  attack.h  basalt_launcher.sh  boot  bootstrap.h  bootstrap_server.c  exchange_protocol.h  ip.h  launcher.sh  node  socket_IO.c  socket_IO.h  test_script.sh
ansible/bootstrap_server/bootstrap/: bootstrap.js
ansible/bootstrap_server/bootstrap/public/: index.html
basalt_core/: CMakeLists.txt  client.cpp  main.cpp  net_test.cpp  p2p_test.cpp  ranking_tests.cpp  server.cpp  test.cpp  test2.cpp
basalt_core/include/: Array.hpp  HTTPLogger.hpp  Hash.hpp  JOAATHash.hpp  Node.hpp  NodeId.hpp  SHA256Hash.hpp  SpookyHash.h  basalt.hpp  llhttp.h  misc.h  rng.hpp  sha256.h
basalt_core/include/net/: HTTPClient.hpp  Message.hpp  PullRequest.hpp  Session.hpp  basalt_net.hpp
basalt_core/log/: bs_srv.py  createBootStrap.py  launch.py
basalt_core/src/: HTTPLogger.cpp  JOAATHash.cpp  Node.cpp  NodeId.cpp  SHA256Hash.cpp  SpookyHash.cpp  basalt.cpp  fasthash.c  misc.cpp  rng.cpp  sha256.cpp  spooky_hash_private.hpp
basalt_core/src/llhttp/: api.c  llhttp.c
basalt_core/src/net/: Message.cpp  Session.cpp  basalt_net.cpp
basalt_net/: CMakeLists.txt  basalt_net.cpp  test.cpp
basalt_net/include/: basalt_net.hpp
basalt_net/src/: basalt_net.cpp
basaltsim/: fast_hashing_test.htm  graph.js  hash.js  index.htm  main.js  malicious_peer.js  md5.js  peer.js  preset.js  style.css
bootstrap_server/: .gitignore  Makefile  Node.c  attack.c  attack.h  basalt_launcher.sh  bootstrap.c  bootstrap.h  bootstrap_server.c  exchange_protocol.h  ip.c  ip.h  launcher.sh  socket_IO.c  socket_IO.h  stop_simulation.sh  test.c  test_script.sh
bootstrap_server/bootstrap/: bootstrap.js  form.css  form.html  index.html  package-lock.json  package.json
bootstrap_server/bootstrap/public/: index.html
core/: CMakeLists.txt  byzantine_test.cpp  demo.old.sh  demo.sh  honest_node.cpp  p2p_test.cpp  p2p_test_2.cpp  p2p_test_m.cpp  ranking_tests.cpp  stop.sh  test.cpp  test2.cpp
core/include/: Array.hpp  HTTPLogger.hpp  Node.hpp  NodeId.hpp  SpookyHash.h  basalt.hpp  bootstrap_server_structs.h  endian.h  endian.hpp  hash64.h  misc.h  rng.hpp  sha256.h
core/include/net/: Message.hpp  Session.hpp  basalt_net.hpp
core/log/: bs_srv.py  debug_srv.py  index.php  post_test.sh
core/log/bootstrap-server/: bootstrap.py
core/log/logging-server/: package-lock.json  server.js
core/log/logging-server/panel/: background.css  graph.js  index.html  main.js  nodeInfo.js  style.css
core/log/php_srv/: graph.js  index.php  main.js  nodeInfo.js  panel.htm  server.js  start.sh  style.css
core/src/: HTTPLogger.cpp  JOAATHash.cpp  Node.cpp  NodeId.cpp  basalt.cpp  hash64.c  misc.cpp  rng.cpp
core/src/net/: HTTPClient.cpp  Message.cpp  Session.cpp
cpp_sim/: Array.hpp  CMakeLists.txt  Hash.hpp  Node.cpp  Node.hpp  ScopeTimer.hpp  avalanche.cpp  hash_test.cpp  joaat_hash.c  joaat_hash.h  main.cpp  makefile  sha256.c  sha256.h  test.cpp
launcher/: bootstrap.js  index.html  launch_metric_server.sh  launcher.js  launcher.sh  package-lock.json  package.json  send_bin.yaml  stop_simu.sh  update_code.sh
serveur/: .env  .gitignore  Readme.md  package-lock.json  package.json  panel  tsconfig.json
serveur/panel/: graph.js  main.js  nodeInfo.js
serveur/public/: app.js  gaugeChart.js  graphs.js  networkGraph.js  networkInfo.js  networkNode.js  particles.min.js  particlesNetwork.js  sample.json
serveur/src/: db.ts  server.js  server.ts
serveur/src/Interface/: InfoNoeud.ts  NodeID.ts  Vue.ts
serveur/style/: gaugeChart.css  homepage.css  network.css  stats.css
serveur/views/: homepage.html  homepage.pug  layout.pug  network.pug  stats.pug
